# itk_working

./: CMakeLists.txt  README.md
tools/registration/: CMakeLists.txt  CMakeLists.txt~
tools/registration/AffRegistration/: CMakeLists.txt  MyAffineRegistration.cxx
tools/registration/MMRegistration/: CMakeLists.txt  MyRigidMMRegistration.cxx  MyRigidMMRegistration.cxx.original
tools/registration/MeshAffineRegistration/: CMakeLists.txt  main.cxx
tools/registration/bspline/: CMakeLists.txt  MyRegistration.cxx
tools/registration/itkSuarezBlockMatchingRegistration/: CMakeLists.txt  CMakeLists.txt~  README.txt  data_outputAuthor_odraude256def.mha  itkNanWarpImageFilter.h  itkNanWarpImageFilter.txx  itkSuarezBlockMatchingRegistration.h  itkSuarezBlockMatchingRegistration.txx  itkVectorDivideImageFilter.h  main.cxx
tools/registration/lib/: affineMultiRegistration.cxx  affineMultiRegistration.h  affineNormalisedMultiRegistration.cxx  affineNormalisedMultiRegistration.h  simpleCommandIterationUpdate.h  simpleGradientCommandIterationUpdate.h  simpleGradientObserver.h  simpleObserver.h  translationCommandIterationUpdate.h  translationMutliRegistration.cxx  translationMutliRegistration.h  translationNormalisedMultiRegistration.cxx  translationNormalisedMultiRegistration.h  visualobserver.h
tools/registration/multi_reso_aff_norm_registration/: CMakeLists.txt  main.cxx
tools/registration/multi_reso_aff_registration/: .main_normalizer.cxx.swp  CMakeLists.txt  main.cxx
tools/registration/multi_reso_demons/: CMakeLists.txt  itkDiffeomorphicDemonsRegistrationFilter.h  (+12 more)
(+137 files in other folders)
