add_subdirectory (multi_reso_aff_registration)
add_subdirectory (multi_reso_aff_norm_registration)
add_subdirectory (multi_reso_transOnly_norm_registration)
add_subdirectory (symmetric_demons)
add_subdirectory (multi_reso_demons)
# add_subdirectory (itkSuarezBlockMatchingRegistration)
add_subdirectory (MMRegistration)
# add_subdirectory (AffRegistration)
# add_subdirectory (bspline)
add_subdirectory (similarityTransformBased)
add_subdirectory (MeshAffineRegistration)
add_subdirectory (symmetric_log_domain_demons)
